--- a/Culture_Amp.ipynb
+++ b/Culture_Amp.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -246,12 +246,39 @@
    "source": [
     "from utils.prepare_data import *\n",
     "\n",
-    "x_test = prepare_test_data(tokenizer, max_length, verbose=True)"
+    "x_test, test_inputs = prepare_test_data(tokenizer, max_length, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from utils.model import *\n",
+    "\n",
+    "test_probs = predict_with_model(x_test, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from utils.results import*\n",
+    "\n",
+    "first_ind, first_q, first_code, first_score = top_result(test_probs, ref_q)\n",
+    "second_ind, second_q, second_code, second_score = second_result(test_probs, ref_q, first_ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
@@ -260,50 +287,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test probabilities:\n",
-      " [[0.00 99.99 0.00 0.01]\n",
-      " [0.00 0.00 99.99 0.00]\n",
-      " [0.00 0.00 99.99 0.00]\n",
-      " [99.99 0.00 0.00 0.00]\n",
-      " [0.00 99.99 0.00 0.01]\n",
-      " [0.01 0.02 0.01 99.95]\n",
-      " [0.00 0.00 99.99 0.00]\n",
-      " [0.00 99.99 0.00 0.01]\n",
-      " [99.99 0.00 0.00 0.00]\n",
-      " [0.00 99.99 0.00 0.01]]\n"
+      "Question: \"My team is enthusiatic about the work we do\"\n",
+      "Primary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Primary Reference Question Code: ENA.3\n",
+      "Relevance: 99.993%\n",
+      "Secondary Reference Question: We are encouraged to be innovative even though some of our initiatives may not succeed\n",
+      "Secondary Reference Question Code: INN.2\n",
+      "Relevance: 0.006%\n",
+      "\n",
+      "\n",
+      "Question: \"I understand what I need to do to move up at StarWars\"\n",
+      "Primary Reference Question: I know what I need to do to be successful in my role\n",
+      "Primary Reference Question Code: ALI.5\n",
+      "Relevance: 99.994%\n",
+      "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Secondary Reference Question Code: ENA.3\n",
+      "Relevance: 0.004%\n",
+      "\n",
+      "\n",
+      "Question: \"I understand clearly what I need to do to be successful in my current role\"\n",
+      "Primary Reference Question: I know what I need to do to be successful in my role\n",
+      "Primary Reference Question Code: ALI.5\n",
+      "Relevance: 99.994%\n",
+      "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Secondary Reference Question Code: ENA.3\n",
+      "Relevance: 0.004%\n",
+      "\n",
+      "\n",
+      "Question: \"Team members are collectively accountable for achievements\"\n",
+      "Primary Reference Question: We hold ourselves and our team members accountable for results\n",
+      "Primary Reference Question Code: TEA.2\n",
+      "Relevance: 99.993%\n",
+      "Secondary Reference Question: I know what I need to do to be successful in my role\n",
+      "Secondary Reference Question Code: ALI.5\n",
+      "Relevance: 0.004%\n",
+      "\n",
+      "\n",
+      "Question: \"Is available when I really need them\"\n",
+      "Primary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Primary Reference Question Code: ENA.3\n",
+      "Relevance: 99.993%\n",
+      "Secondary Reference Question: We are encouraged to be innovative even though some of our initiatives may not succeed\n",
+      "Secondary Reference Question Code: INN.2\n",
+      "Relevance: 0.006%\n",
+      "\n",
+      "\n",
+      "Question: \"We are encouraged to be innovative even though some of our initiatives may not succeed\"\n",
+      "Primary Reference Question: We are encouraged to be innovative even though some of our initiatives may not succeed\n",
+      "Primary Reference Question Code: INN.2\n",
+      "Relevance: 99.953%\n",
+      "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Secondary Reference Question Code: ENA.3\n",
+      "Relevance: 0.022%\n",
+      "\n",
+      "\n",
+      "Question: \"I know what is expected of me to be successful in my role\"\n",
+      "Primary Reference Question: I know what I need to do to be successful in my role\n",
+      "Primary Reference Question Code: ALI.5\n",
+      "Relevance: 99.994%\n",
+      "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Secondary Reference Question Code: ENA.3\n",
+      "Relevance: 0.004%\n",
+      "\n",
+      "\n",
+      "Question: \"The information I need to do my job effectively is readily available\"\n",
+      "Primary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Primary Reference Question Code: ENA.3\n",
+      "Relevance: 99.993%\n",
+      "Secondary Reference Question: We are encouraged to be innovative even though some of our initiatives may not succeed\n",
+      "Secondary Reference Question Code: INN.2\n",
+      "Relevance: 0.006%\n",
+      "\n",
+      "\n",
+      "Question: \"We hold ourselves and our team members accountable for results\"\n",
+      "Primary Reference Question: We hold ourselves and our team members accountable for results\n",
+      "Primary Reference Question Code: TEA.2\n",
+      "Relevance: 99.993%\n",
+      "Secondary Reference Question: I know what I need to do to be successful in my role\n",
+      "Secondary Reference Question Code: ALI.5\n",
+      "Relevance: 0.004%\n",
+      "\n",
+      "\n",
+      "Question: \"The information I need to do my job effectively is readily available\"\n",
+      "Primary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Primary Reference Question Code: ENA.3\n",
+      "Relevance: 99.993%\n",
+      "Secondary Reference Question: We are encouraged to be innovative even though some of our initiatives may not succeed\n",
+      "Secondary Reference Question Code: INN.2\n",
+      "Relevance: 0.006%\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from utils.model import *\n",
-    "test_probs = predict_with_model(x_test, model, verbose=True)"
+    "for i in range(10):\n",
+    "    print('Question: %s' % test_inputs[i])\n",
+    "    print('Primary Reference Question: %s' % first_q[i])\n",
+    "    print('Primary Reference Question Code: %s' % first_code[i])\n",
+    "    print('Relevance: %0.3f%%' % (first_score[i]*100))\n",
+    "       \n",
+    "    print('Secondary Reference Question: %s' % second_q[i])\n",
+    "    print('Secondary Reference Question Code: %s' % second_code[i])\n",
+    "    print('Relevance: %0.3f%%' % (second_score[i]*100))\n",
+    "    \n",
+    "    print('\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from utils.results import*\n",
-    "\n",
-    "first_ind, first_q, first_code = top_result(test_outputs, ref_q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -311,109 +404,26 @@
     {
      "data": {
       "text/plain": [
-       "(array([1, 2, 2, 0, 1, 3, 2, 1, 0, 1]),\n",
-       " ['The information I need to do my job effectively is readily available',\n",
-       "  'I know what I need to do to be successful in my role',\n",
-       "  'I know what I need to do to be successful in my role',\n",
-       "  'We hold ourselves and our team members accountable for results',\n",
-       "  'The information I need to do my job effectively is readily available',\n",
-       "  'We are encouraged to be innovative even though some of our initiatives may not succeed',\n",
-       "  'I know what I need to do to be successful in my role',\n",
-       "  'The information I need to do my job effectively is readily available',\n",
-       "  'We hold ourselves and our team members accountable for results',\n",
-       "  'The information I need to do my job effectively is readily available'],\n",
-       " ['ENA.3',\n",
-       "  'ALI.5',\n",
-       "  'ALI.5',\n",
-       "  'TEA.2',\n",
-       "  'ENA.3',\n",
-       "  'INN.2',\n",
-       "  'ALI.5',\n",
-       "  'ENA.3',\n",
-       "  'TEA.2',\n",
-       "  'ENA.3'])"
+       "array([[0.0000, 0.9999, 0.0000, 0.0001],\n",
+       "       [0.0000, 0.0000, 0.9999, 0.0000],\n",
+       "       [0.0000, 0.0000, 0.9999, 0.0000],\n",
+       "       [0.9999, 0.0000, 0.0000, 0.0000],\n",
+       "       [0.0000, 0.9999, 0.0000, 0.0001],\n",
+       "       [0.0001, 0.0002, 0.0001, 0.9995],\n",
+       "       [0.0000, 0.0000, 0.9999, 0.0000],\n",
+       "       [0.0000, 0.9999, 0.0000, 0.0001],\n",
+       "       [0.9999, 0.0000, 0.0000, 0.0000],\n",
+       "       [0.0000, 0.9999, 0.0000, 0.0001]], dtype=float32)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_ind, first_q, first_code"
+    "test_probs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# second_ind, second_q, second_code = second_result(test_outputs, ref_q, first_ind)\n",
-    "outputs = second_result(test_outputs, ref_q, first_ind)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "second_ind, second_q, second_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test_outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "first_ind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
