--- a/Culture_Amp.ipynb
+++ b/Culture_Amp.ipynb
@@ -19,21 +19,29 @@
     "# Imports\n",
     "from __future__ import print_function\n",
     "\n",
+    "# Hide warnings\n",
+    "import os\n",
+    "import warnings\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' #Hide messy TensorFlow warnings\n",
+    "warnings.filterwarnings(\"ignore\") #Hide messy Numpy warnings\n",
+    "\n",
     "# Keras\n",
     "import keras\n",
-    "\n",
-    "# Other\n",
-    "import random\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "\n"
+    "\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.models import load_model\n",
+    "\n",
+    "from utils.prepare_data import*\n",
+    "from utils.model import *\n",
+    "from utils.plots import *\n",
+    "from utils.results import*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -94,14 +102,13 @@
     }
    ],
    "source": [
-    "from utils.prepare_data import*\n",
-    "\n",
-    "ref_q, inputs = load_data(verbose=True)"
+    "# Load data\n",
+    "ref_q, inputs = load_data(verbose=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +125,7 @@
     }
    ],
    "source": [
-    "from utils.prepare_data import *\n",
+    "# Create input/output vectors\n",
     "x_train, y_train, tokenizer, max_length, vocab_size = create_training_vectors(inputs)"
    ]
   },
@@ -131,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -141,47 +148,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
       "Loading pretrained model...\n",
       "Pretrained model loaded\n"
      ]
     }
    ],
    "source": [
-    "# Train Model\n",
-    "from utils.model import *\n",
-    "from utils.plots import *\n",
-    "from keras.callbacks import ModelCheckpoint\n",
-    "from keras.models import load_model\n",
-    "\n",
-    "import os\n",
-    "\n",
     "if not os.path.isfile('model/model'):\n",
-    "    print('Building model...')\n",
-    "    model = build_model(vocab_size, max_length, verbose=False)\n",
+    "    # Build & Compile Model\n",
+    "    print('\\n\\nBuilding model...')\n",
+    "    model = build_model(vocab_size, max_length, verbose=True)\n",
     "\n",
     "    # Callbacks\n",
     "    checkpointer = ModelCheckpoint('model/model', monitor='val_loss', verbose=0, save_best_only=True, \\\n",
     "                                   save_weights_only=False, mode='auto', period=1)\n",
     "\n",
+    "    # Train Model\n",
     "    print('Training model...')\n",
+    "    print('This should take around 5 minutes...')\n",
     "    history = model.fit(x_train, y_train,\n",
     "                       batch_size=32, epochs=250,\n",
     "                       verbose=0,\n",
     "                       validation_split=0.2,\n",
     "                       shuffle=True,\n",
     "                       callbacks=[checkpointer])\n",
-    "    \n",
+    "\n",
+    "    # Visualise training\n",
     "    plot_loss(history)\n",
-    "    \n",
+    "\n",
+    "    print('\\n\\nLoading best model...')\n",
+    "    model = load_model('model/model')\n",
+    "\n",
     "else:\n",
-    "    print('Loading pretrained model...')\n",
+    "    # Load Model\n",
+    "    print('\\n\\nLoading pretrained model...')\n",
     "    model = load_model('model/model')\n",
     "    print('Pretrained model loaded')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -190,16 +199,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Overall Loss: 0.0276\n",
-      "Overall Accuracy: 98.99%\n"
+      "\n",
+      "\n",
+      "Evaluating model...\n",
+      "Overall Loss: 0.0133\n",
+      "Overall Accuracy: 99.33%\n"
      ]
     }
    ],
    "source": [
     "# Evalute Model\n",
-    "\n",
+    "print('\\n\\nEvaluating model...')\n",
     "score = model.evaluate(x_train, y_train, verbose=0)\n",
-    "print('    Overall Loss: %.4f' % score[0])\n",
+    "print('Overall Loss: %.4f' % score[0])\n",
     "print('Overall Accuracy: %.2f%%' % (score[1]*100))"
    ]
   },
@@ -212,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -238,27 +250,25 @@
     }
    ],
    "source": [
-    "from utils.prepare_data import *\n",
-    "\n",
+    "# Import test data & create input vector\n",
     "x_test, test_inputs = prepare_test_data(tokenizer, max_length, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from utils.model import *\n",
-    "\n",
+    "# Employ model on test data\n",
     "test_probs = predict_with_model(x_test, model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -273,98 +283,99 @@
       "Question #1: \"My team is enthusiatic about the work we do\"\n",
       "Primary Reference Question: We hold ourselves and our team members accountable for results\n",
       "Primary Reference Question Code: TEA.2\n",
-      "Relevance: 99.549%\n",
+      "Relevance: 99.979%\n",
       "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
       "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.340%\n",
+      "Relevance: 0.013%\n",
       "\n",
       "\n",
       "Question #2: \"I understand what I need to do to move up at StarWars\"\n",
       "Primary Reference Question: I know what I need to do to be successful in my role\n",
       "Primary Reference Question Code: ALI.5\n",
-      "Relevance: 99.538%\n",
+      "Relevance: 99.981%\n",
       "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
       "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.371%\n",
+      "Relevance: 0.010%\n",
       "\n",
       "\n",
       "Question #3: \"I understand clearly what I need to do to be successful in my current role\"\n",
       "Primary Reference Question: I know what I need to do to be successful in my role\n",
       "Primary Reference Question Code: ALI.5\n",
-      "Relevance: 99.653%\n",
+      "Relevance: 99.981%\n",
       "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
       "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.256%\n",
+      "Relevance: 0.010%\n",
       "\n",
       "\n",
       "Question #4: \"Team members are collectively accountable for achievements\"\n",
       "Primary Reference Question: We hold ourselves and our team members accountable for results\n",
       "Primary Reference Question Code: TEA.2\n",
-      "Relevance: 99.634%\n",
+      "Relevance: 99.979%\n",
       "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
       "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.270%\n",
+      "Relevance: 0.013%\n",
       "\n",
       "\n",
       "Question #5: \"Is available when I really need them\"\n",
-      "Primary Reference Question: I know what I need to do to be successful in my role\n",
-      "Primary Reference Question Code: ALI.5\n",
-      "Relevance: 99.521%\n",
-      "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
-      "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.355%\n",
+      "Primary Reference Question: The information I need to do my job effectively is readily available\n",
+      "Primary Reference Question Code: ENA.3\n",
+      "Relevance: 99.971%\n",
+      "Secondary Reference Question: We hold ourselves and our team members accountable for results\n",
+      "Secondary Reference Question Code: TEA.2\n",
+      "Relevance: 0.019%\n",
       "\n",
       "\n",
       "Question #6: \"We are encouraged to be innovative even though some of our initiatives may not succeed\"\n",
       "Primary Reference Question: We are encouraged to be innovative even though some of our initiatives may not succeed\n",
       "Primary Reference Question Code: INN.2\n",
-      "Relevance: 99.786%\n",
-      "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
-      "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.119%\n",
+      "Relevance: 99.891%\n",
+      "Secondary Reference Question: We hold ourselves and our team members accountable for results\n",
+      "Secondary Reference Question Code: TEA.2\n",
+      "Relevance: 0.061%\n",
       "\n",
       "\n",
       "Question #7: \"I know what is expected of me to be successful in my role\"\n",
       "Primary Reference Question: I know what I need to do to be successful in my role\n",
       "Primary Reference Question Code: ALI.5\n",
-      "Relevance: 99.654%\n",
+      "Relevance: 99.981%\n",
       "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
       "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.256%\n",
+      "Relevance: 0.010%\n",
       "\n",
       "\n",
       "Question #8: \"The information I need to do my job effectively is readily available\"\n",
       "Primary Reference Question: The information I need to do my job effectively is readily available\n",
       "Primary Reference Question Code: ENA.3\n",
-      "Relevance: 99.739%\n",
+      "Relevance: 99.971%\n",
       "Secondary Reference Question: We hold ourselves and our team members accountable for results\n",
       "Secondary Reference Question Code: TEA.2\n",
-      "Relevance: 0.180%\n",
+      "Relevance: 0.019%\n",
       "\n",
       "\n",
       "Question #9: \"We hold ourselves and our team members accountable for results\"\n",
       "Primary Reference Question: We hold ourselves and our team members accountable for results\n",
       "Primary Reference Question Code: TEA.2\n",
-      "Relevance: 99.634%\n",
+      "Relevance: 99.979%\n",
       "Secondary Reference Question: The information I need to do my job effectively is readily available\n",
       "Secondary Reference Question Code: ENA.3\n",
-      "Relevance: 0.270%\n",
+      "Relevance: 0.013%\n",
       "\n",
       "\n",
       "Question #10: \"The information I need to do my job effectively is readily available\"\n",
       "Primary Reference Question: The information I need to do my job effectively is readily available\n",
       "Primary Reference Question Code: ENA.3\n",
-      "Relevance: 99.739%\n",
+      "Relevance: 99.971%\n",
       "Secondary Reference Question: We hold ourselves and our team members accountable for results\n",
       "Secondary Reference Question Code: TEA.2\n",
-      "Relevance: 0.180%\n",
+      "Relevance: 0.019%\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from utils.results import *\n",
+    "# Find 1st & 2nd most correlated reference questions\n",
+    "# Display results\n",
     "display_results(test_probs, test_inputs, ref_q)"
    ]
   }
